--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,13 +60,20 @@
                 android:text="\?"/>
             <TextView
                 android:paddingLeft="5dp"
+                android:id="@+id/winLottoNumtxt06"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="25sp"
+                android:text="\?"/>
+            <TextView
+                android:paddingLeft="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="25sp"
                 android:text="\+"/>
             <TextView
                 android:paddingLeft="5dp"
-                android:id="@+id/winLottoNumtxt06"
+                android:id="@+id/winLottoBonusNumtxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="25sp"
@@ -74,11 +81,154 @@
 
         </LinearLayout>
 
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="내 입력번호"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginTop="10dp">
+
+
+
+            <TextView
+                android:paddingLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="25sp"
+                android:text="12"/>
+
+            <TextView
+                android:paddingLeft="5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="25sp"
+                android:text="15"/>
+            <TextView
+                android:paddingLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="25sp"
+                android:text="30"/>
+            <TextView
+                android:paddingLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="25sp"
+                android:text="26"/>
+            <TextView
+                android:paddingLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="25sp"
+                android:text="14"/>
+            <TextView
+                android:paddingLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="25sp"
+                android:text="19"/>
+            <TextView
+                android:paddingLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="25sp"
+                android:text="\+"/>
+            <TextView
+                android:paddingLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="25sp"
+                android:text="33"/>
+
+        </LinearLayout>
+
+
         <Button
             android:id="@+id/buyOneLottoBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="로또 한장 구매하기"/>
+
+        <Button
+            android:id="@+id/buyAutoLottoBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="로또 자동 구매하기"/>
+
+        <TextView
+            android:id="@+id/useMoneyTxt"
+            android:layout_marginTop="15dp"
+            android:textSize="16sp"
+            android:text="사용 금액 : 0원"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/winMoneyTxt"
+            android:layout_marginTop="15dp"
+            android:textSize="16sp"
+            android:text="당첨 금액 : 0원"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/firstRankCountTxt"
+            android:layout_marginTop="15dp"
+            android:textSize="16sp"
+            android:text="1등 : 0회"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/secondRankCountTxt"
+            android:layout_marginTop="15dp"
+            android:textSize="16sp"
+            android:text="2등 : 0회"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/thirdRankCountTxt"
+            android:layout_marginTop="15dp"
+            android:textSize="16sp"
+            android:text="3등 : 0회"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/forthRankCountTxt"
+            android:layout_marginTop="15dp"
+            android:textSize="16sp"
+            android:text="4등 : 0회"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/fifthRankCountTxt"
+            android:layout_marginTop="15dp"
+            android:textSize="16sp"
+            android:text="5등 : 0회"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/noRankCountTxt"
+            android:layout_marginTop="15dp"
+            android:textSize="16sp"
+            android:text="꽝 : 0회"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+
+
+
 
 
 
